# mathematics_simple_library

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  compile_and_run.cmd  main.cpp  mathematics_simple_library.hpp
samples/: README.md
samples/blue_noise_generator/: CMakeLists.txt  main.cpp
samples/common/: bmpmini.hpp
samples/jump_flooding_algorithm/: CMakeLists.txt  main.cpp
samples/lights_out_solver/: CMakeLists.txt  main.cpp
samples/ray_tracing/: CMakeLists.txt  main.cpp  thread_pool.h
